Apply suggestions from code review
Co-authored-by: Antonio Román <kyradiscord@gmail.com>

--- a/guide/voice/v12.md
+++ b/guide/voice/v12.md
@@ -6,7 +6,7 @@ Discord.js v11 and v12 are released with built-in voice engines for playing audi
 
 ## Improved audio playback
 
-The focus of `@discordjs/voice` was to improve audio playback performance. In Discord.js v12, occasionally streams would suffer from "micro tears" in the audio. This would sound like a small crackle between audio packets, or simply a very small gap between audio packets.
+The focus of `@discordjs/voice` was to improve audio playback performance. In Discord.js v12, streams would occasionally suffer from "micro tears" in the audio. This would sound like a small crackle between audio packets, or simply a very small gap between audio packets.
 
 Additionally, audio streams could sometimes sound like they are speeding up/slowing down after gaps in transmission.
 
