Apply suggestions from code review
Co-authored-by: Papaia <43409674+papaia@users.noreply.github.com>
Co-authored-by: Sanctuary <Danktuary@users.noreply.github.com>

--- a/guide/voice/v12.md
+++ b/guide/voice/v12.md
@@ -1,6 +1,6 @@
 # Comparison to v12
 
-Discord.js v11 and v12 are released with built-in voice engines for playing audio over Discord. They have been plagued with issues and have had suffered from volatile performance.
+Discord.js v11 and v12 are released with built-in voice engines for playing audio over Discord. They have been plagued with issues and suffered from volatile performance.
 
 `@discordjs/voice` is a new replacement for these engines and is a separate "add-on" that you can install that aims to solve these problems.
 
