Add purple theme to voice

--- a/guide/voice/v12.md
+++ b/guide/voice/v12.md
@@ -1,3 +1,7 @@
+---
+forceTheme: purple
+---
+
 # Comparison to v12
 
 Discord.js v11 and v12 are released with built-in voice engines for playing audio over Discord. They have been plagued with issues and suffered from volatile performance.
