Use require() imports

--- a/guide/voice/v12.md
+++ b/guide/voice/v12.md
@@ -33,8 +33,8 @@ In Discord.js v12, you can specify a `seek` parameter when playing audio to jump
 This inconsistency has led to confusing problems for developers, and we now feel that `seek` is outside the scope of `@discordjs/voice`. Instead, you can quite easily specify `seek` - as well as any other FFmpeg options that you want to - using [prism-media](https://github.com/amishshah/prism-media). For example, here is how you could re-implement seek for streams that you need it for:
 
 ```ts
-import * as prism from 'prism-media';
-import { createAudioResource } from '@discordjs/voice';
+const prism = require('prism-media');
+const { createAudioResource } = require('@discordjs/voice');
 
 // These are arguments used to convert the input to a format suitable for @discordjs/voice
 const FFMPEG_ARGUMENTS = [
