Apply suggestions from code review
Co-authored-by: Papaia <43409674+papaia@users.noreply.github.com>

--- a/guide/voice/v12.md
+++ b/guide/voice/v12.md
@@ -6,7 +6,7 @@ forceTheme: purple
 
 Discord.js v11 and v12 are released with built-in voice engines for playing audio over Discord. They have been plagued with issues and suffered from volatile performance.
 
-`@discordjs/voice` is a new replacement for these engines and is a separate "add-on" that you can install that aims to solve these problems.
+`@discordjs/voice` is a new replacement for these engines and is a separate "add-on" you can install, whose purpose is to solve these problems.
 
 ## Improved audio playback
 
@@ -28,7 +28,7 @@ We have taken the decision to remove support for voice receive until the feature
 
 ## Removal of `seek` in streams
 
-In Discord.js v12, you can specify a `seek` parameter when playing audio to jump to a specific part of the audio track and begin playback from there. This only applies to FFmpeg streams, and the option is ignored for any other type of stream. Additionally, it leads to the question of whether we should support additional FFmpeg parameters.
+In Discord.js v12, you could specify a `seek` parameter when playing audio to jump to a specific part of the audio track and begin playback from there. This only applies to FFmpeg streams, and the option is ignored for any other type of stream. Additionally, it leads to the question of whether we should support additional FFmpeg parameters.
 
 This inconsistency has led to confusing problems for developers, and we now feel that `seek` is outside the scope of `@discordjs/voice`. Instead, you can quite easily specify `seek` - as well as any other FFmpeg options that you want to - using [prism-media](https://github.com/amishshah/prism-media). For example, here is how you could re-implement seek for streams that you need it for:
 
