style: fix linter errors

--- a/guide/voice/v12.md
+++ b/guide/voice/v12.md
@@ -42,12 +42,12 @@ const FFMPEG_ARGUMENTS = [
 	'-loglevel', '0',
 	'-f', 's16le',
 	'-ar', '48000',
-	'-ac', '2'
+	'-ac', '2',
 ];
 
 // An audio stream starting from 10mins onwards in myfile.mp3
 const stream = new prism.FFmpeg({
-	args: ['-ss', '00:10:00', '-i', 'myfile.mp3', ...FFMPEG_ARGUMENTS];
+	args: ['-ss', '00:10:00', '-i', 'myfile.mp3', ...FFMPEG_ARGUMENTS],
 });
 
 const resource = createAudioResource(stream);
